[package]
name = "rss-downloader"
version = "0.1.0"
authors = ["Jarkko Oranen"]
edition = "2018"

[dependencies]
regex = "1"
sha2 = "0.8.0"
failure = "0.1.5"

[dependencies.rss]
version = "1.6.1"

[dependencies.config]
default-features = false
features = ["toml"]
version = "0.9"

[dependencies.serde]
version = "1"

[dependencies.serde_derive]
version = "1"

[dependencies.reqwest]
version = "0.9.11"
default-features = false
features = ["rustls-tls"]
